# chess

./: Cargo.toml
src/: board.rs  computer_player.rs  config.rs  console_controller.rs  controller.rs  game.rs  human_player.rs  io_controller.rs  io_view.rs  lib.rs  main.rs  model.rs  move_data.rs  move_logger.rs  pgn_notation_util.rs  piece_move.rs  player.rs  player_move.rs  position.rs  terminal_player.rs  view.rs
src/pieces/: bishop.rs  chess_piece.rs  king.rs  knight.rs  mod.rs  move_data_util.rs  pawn.rs  piece.rs  piece_util.rs  queen.rs  rook.rs
tests/: game_tests.rs
tests/common/: mod.rs  test_controller.rs  test_view.rs
