[package]
name = "chess"
version = "0.1.2"
authors = ["Adam Matthews <a.matthews42@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.186", features = ["derive"]}
serde_json = "1.0.105"
